<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:id="@+id/widget_item_layout"
    android:layout_marginTop="@dimen/node_marginTop"
    android:layout_marginStart="@dimen/node_marginStart"
    android:layout_marginEnd="@dimen/node_marginEnd"
    android:background="#606060"
    android:layout_height="70dp"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:id="@+id/widget_image"
        android:src="@drawable/generic_cover"
        android:contentDescription="@string/album_artwork"
        android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/detail_box">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Song Title"
                android:maxLines="1"
                android:contentDescription="@string/song_title_description"
                android:id="@+id/widget_title"
                style="@style/TextSongTitleWidget"
                android:layout_marginTop="0dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Artist Name"
                android:maxLines="1"
                android:contentDescription="@string/artist_name_description"
                android:id="@+id/widget_artist"
                style="@style/TextSongArtistWidget"
                android:layout_below="@+id/widget_title"
                android:layout_marginTop="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/widgetPrevious"
                android:contentDescription="@string/skip_prev"
                android:src="@drawable/ic_skip_previous_white_24dp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:id="@+id/widgetPlayPause"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/uamp_ic_pause_white_24dp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/widgetNext"
                android:contentDescription="@string/skip_next"
                android:src="@drawable/ic_skip_next_white_24dp" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>