<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:id="@+id/playlist_item_layout"
    android:layout_marginTop="@dimen/node_marginTop"
    android:layout_marginStart="@dimen/node_marginStart"
    android:layout_marginEnd="@dimen/node_marginEnd"
    android:background="#ffffff"
    android:layout_height="60dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/playlist_image"
        android:contentDescription="@string/album_artwork" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:id="@+id/playlist_title"
                android:contentDescription="@string/song_title"
                style="@style/TextSongTitle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Artist"
                android:id="@+id/playlist_artist"
                android:contentDescription="@string/song_artist"
                style="@style/TextSongArtist" />
            </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/playlistItemMoreMenu"
            android:contentDescription="@string/more_menu"
            android:src="@drawable/ic_more_vert_black_24dp" />

    </LinearLayout>
</LinearLayout>