<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.derekmorrison.networkmusicplayer.ui.OnboardingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_instructions"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/textView2"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/start_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" />

</LinearLayout>
